# P2Lenguajes-Haskell

./: .gitignore  README.md  info.txt
Codigo/: Datos.hs  Main.hs  Menu.hs
Documentacion/: Documentacion.doc
Programa/: CHANGELOG.md  lector-json.cabal
Programa/Codigo/: AnalisisDatos.hs  AnalisisTemporal.hs  BusquedaEspecifica.hs  Datos.hs  Estadisticas.hs  Importacion.hs  Main.hs  Menu.hs  Persistencia.hs  ProcesamientoDeDatos.hs
Programa/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  solver-plan  source-hashes  up-to-date
