cabal-version:      3.12
name:               ventas
version:            0.1.0.0
build-type:         Simple

executable ventas
  main-is:          Main.hs
  hs-source-dirs:   ., Codigo
  other-modules:    Menu
                  , Datos
                  , Importacion
                  , ProcesamientoDeDatos
                  , AnalisisDatos
                  , Estadisticas
  default-extensions:
    OverloadedStrings
    DeriveGeneric

  build-depends:
      base        >=4.17 && <5
    , aeson       >=2.0
    , bytestring
    , time
    , directory
    , filepath
    , containers
    , vector
    , text
    , random
    , process >=1.6

  default-language: Haskell2010
  ghc-options: -Wall
